Closed
Bug 780266
Opened 13 years ago
Closed 13 years ago
Add new SWF versions for SWF18 and AIR_3_5
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: enorton, Assigned: dschaffe)
Details
Attachments
(2 files)
|
2.41 KB,
patch
|
dschaffe
:
review+
|
Details | Diff | Splinter Review |
|
944 bytes,
patch
|
brbaker
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
Add support for SWF18 and AIR_3_5 in API version map.
Actual results:
New APIs need to target new version, so support in VM needs to be added.
Expected results:
New APIs need to target new version, so support in VM needs to be added.
CL 1100753
Added support for swf18 and namespace 3.5
Attachment #652250 -
Flags: review?(dschaffe)
| Assignee | ||
Updated•13 years ago
|
Attachment #652250 -
Flags: review?(dschaffe) → review+
| Assignee | ||
Updated•13 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → dschaffe
| Assignee | ||
Comment 2•13 years ago
|
||
landed patch in http://hg.mozilla.org/tamarin-redux/rev/c0e57db1ba07
| Assignee | ||
Updated•13 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #660073 -
Flags: review?(brbaker)
Updated•13 years ago
|
Attachment #660073 -
Flags: review?(brbaker) → review+
Comment 4•13 years ago
|
||
changeset: 7541:ce6e9c01569b
user: Dan Schaffer <Dan.Schaffer@adobe.com>
summary: bug 780266: add swf=18 to avmshell and runtests.py (r=brbaker)
http://hg.mozilla.org/tamarin-redux/rev/ce6e9c01569b
You need to log in
before you can comment on or make changes to this bug.
Description
•