bug 780266: add swf=18 to avmshell and runtests.py  (r=brbaker)

CL@1111047